# petri

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  main.go  pyproject.toml
docs/adr/: 000-go-rewrite-reset.md  001-code-execution-strategy.md  001-sandbox-domain-model.md  002-http-wire-contract.md  002-sandbox-model.md  003-sandbox-model.md  004-executor-stderr-handling.md  005-persistent-workspace-model.md  006-auto-dependency-detection.md  007-test-mode.md  008-project-upload-via-zip.md  009-persistent-registry-with-sqlite.md  010-sandbox-ttl-with-last-active-reset.md  011-streaming-execution-via-sse.md  012-mcp-server-for-ai-coding-agents.md  014-observability-and-execution-history.md  015-read-only-dashboard.md
internal/httpapi/: sandboxes.go  server.go
internal/id/: id.go
internal/run/: run.go  run_test.go  status.go
internal/sandbox/: registry.go  registry_test.go  sandbox.go  sandbox_test.go  status.go
petri/: config.py  dashboard.py  executor.py  log_retention.py  main.py  registry.py  sandbox.py
tests/: test_executor.py  test_main.py  test_registry.py  test_sandbox.py
